# mesg

./: .dockerignore  .drone.yml  Cargo.toml  README.md  build.rs
.run/: Default.run.xml  Run.run.xml  Test.run.xml
client/: mesg.proto
src/: main.rs
src/cluster/: cluster.rs  mod.rs
src/consumer/: collection.rs  consumer.rs  dto.rs  handle.rs  mod.rs  raw.rs  shutdown.rs
src/consumer/jobs/: events_watcher.rs  mod.rs  new_events_watcher.rs  stale_events_watcher.rs
src/consumer/statistics/: mod.rs  statistic.rs
src/controller/: consumer.rs  controller.rs  coordinator.rs  mod.rs
src/controller/jobs/: mod.rs  restorer.rs
src/metrics/: mod.rs  server.rs  writer.rs
src/server/: grpc.rs  mod.rs  server.rs  service.rs
src/server/auxilary/: mod.rs  server.rs
src/server/network/: grpc.rs  mod.rs  response.rs  service.rs
src/server/transport/: grpc.rs  grpc_impl.rs  mod.rs  response.rs  service.rs
src/server/transport/proto/: mesg.proto  mod.rs
src/storage/: file.rs  identity.rs  idpair.rs  inner.rs  message.rs  message_store.rs  mod.rs  notifier.rs  queues.rs  reader.rs  sequence_generator.rs  storage.rs  utils.rs
src/storage/collections/: minheap.rs  mod.rs  order_queue.rs
src/storage/inner/: memory.rs  mod.rs  raw.rs
src/storage/models/: message.rs
src/storage/naming/: mod.rs
src/storage/utils/: debug.rs  identity.rs  mod.rs  queue.rs  queue_names.rs
src/utils/: mod.rs  paths.rs
testing/: Cargo.toml  build.rs
testing/src/: grpc.rs  lib.rs
