[package]
name = "mesg"
version = "0.4.0"
authors = ["ZOXEXIVO <zoxexivo@gmail.com>"]
edition = "2021"

[dependencies]
tokio = { version = "1.42.0", features = ["full"] }
hyper = { version = "1.5.2", features = ["full"] }
http-body-util = "0.1.2"
hyper-util = { version = "0.1.10", features = ["full"] }
tonic = "0.12.3"
prost = "0.13.4"
timer = "0.2.0"
chrono = "0.4.39"
log = { version = "0.4.22", features = ["release_max_level_info"] }
env_logger = "0.11.6"
bytes = "1.9.0"
chashmap = "2.2.2"
async-trait = "0.1.83"
color-eyre = "0.6.3"
structopt = "0.3.26"
dashmap = "6.1.0"
uuid7 = "1.1.0"

[build-dependencies]
tonic-build = "0.12.3"
