[package]
name = "mesg"
version = "0.4.0"
authors = ["ZOXEXIVO <zoxexivo@gmail.com>"]
edition = "2021"

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
hyper = { version = "1.7.0", features = ["full"] }
http-body-util = "0.1.3"
hyper-util = { version = "0.1.16", features = ["full"] }
tonic = "0.14.2"
prost = "0.14.1"
timer = "0.2.0"
chrono = "0.4.41"
log = { version = "0.4.28", features = ["release_max_level_info"] }
env_logger = "0.11.8"
bytes = "1.10.1"
chashmap = "2.2.2"
async-trait = "0.1.89"
color-eyre = "0.6.5"
structopt = "0.3.26"
dashmap = "6.1.0"
uuid = { version = "1.18.1", features = ["v4"] }
raft = "0.7.0"
serde = { version = "1.0.219", features = ["derive"] }
bincode = {  version = "2.0.1", features = ["serde"] }
tonic-prost = "0.14.2"

[build-dependencies]
tonic-prost-build = "0.14.2"
